--- a/app/src/main/res/layout/chat_message_reply_bubble.xml
+++ b/app/src/main/res/layout/chat_message_reply_bubble.xml
@@ -41,10 +41,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintWidth_max="@dimen/chat_message_content_preview_max_width"
                 app:entries="@{data.contents}"
-                app:layout="@{@layout/chat_message_reply_content_cell}"
-                app:flexWrap="wrap"
-                app:alignItems="center"
-                app:justifyContent="flex_start"/>
+                app:layout="@{@layout/chat_message_reply_content_cell}"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
