--- a/app/src/main/res/layout/history_master_fragment.xml
+++ b/app/src/main/res/layout/history_master_fragment.xml
@@ -176,10 +176,7 @@
             android:id="@+id/history_nav_container"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:defaultNavHost="false"
-            app:navGraph="@navigation/history_nav_graph"/>
+            android:layout_height="match_parent"/>
 
     </androidx.slidingpanelayout.widget.SlidingPaneLayout>
 
