--- a/app/src/main/res/navigation/chat_nav_graph.xml
+++ b/app/src/main/res/navigation/chat_nav_graph.xml
@@ -2,8 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/chat_nav_graph"
-    app:startDestination="@id/emptyChatFragment">
+    android:id="@+id/chat_nav_graph">
 
     <fragment
         android:id="@+id/emptyChatFragment"
@@ -11,8 +10,7 @@
         tools:layout="@layout/empty_fragment"
         android:label="EmptyChatFragment"  />
 
-    <action android:id="@+id/action_global_emptyChatFragment"
-        app:destination="@id/emptyChatFragment" />
+    <action android:id="@+id/action_global_emptyChatFragment" />
 
     <fragment
         android:id="@+id/detailChatRoomFragment"
@@ -20,43 +18,35 @@
         tools:layout="@layout/chat_room_detail_fragment"
         android:label="DetailChatRoomFragment">
         <action
-            android:id="@+id/action_detailChatRoomFragment_to_imdnFragment"
-            app:destination="@id/imdnFragment" />
+            android:id="@+id/action_detailChatRoomFragment_to_imdnFragment" />
         <action
-            android:id="@+id/action_detailChatRoomFragment_to_devicesFragment"
-            app:destination="@id/devicesFragment" />
+            android:id="@+id/action_detailChatRoomFragment_to_devicesFragment" />
         <action
-            android:id="@+id/action_detailChatRoomFragment_to_groupInfoFragment"
-            app:destination="@id/groupInfoFragment" />
+            android:id="@+id/action_detailChatRoomFragment_to_groupInfoFragment" />
         <action
-            android:id="@+id/action_detailChatRoomFragment_to_ephemeralFragment"
-            app:destination="@id/ephemeralFragment" />
+            android:id="@+id/action_detailChatRoomFragment_to_ephemeralFragment" />
     </fragment>
 
     <action
-        android:id="@+id/action_global_detailChatRoomFragment"
-        app:destination="@id/detailChatRoomFragment" />
+        android:id="@+id/action_global_detailChatRoomFragment" />
 
     <fragment
         android:id="@+id/chatRoomCreationFragment"
         android:name="org.linphone.activities.main.chat.fragments.ChatRoomCreationFragment"
         tools:layout="@layout/chat_room_creation_fragment"
         android:label="ChatRoomCreationFragment">
-        <argument
-            android:name="createGroup"
-            app:argType="boolean"
-            android:defaultValue="false" />
+<!--        <argument-->
+<!--            android:name="createGroup"-->
+<!--            app:argType="boolean"-->
+<!--            android:defaultValue="false" />-->
         <action
-            android:id="@+id/action_chatRoomCreationFragment_to_groupInfoFragment"
-            app:destination="@id/groupInfoFragment" />
+            android:id="@+id/action_chatRoomCreationFragment_to_groupInfoFragment" />
         <action
-            android:id="@+id/action_chatRoomCreationFragment_to_detailChatRoomFragment"
-            app:destination="@id/detailChatRoomFragment" />
+            android:id="@+id/action_chatRoomCreationFragment_to_detailChatRoomFragment" />
     </fragment>
 
     <action
-        android:id="@+id/action_global_chatRoomCreationFragment"
-        app:destination="@id/chatRoomCreationFragment" />
+        android:id="@+id/action_global_chatRoomCreationFragment" />
 
     <fragment
         android:id="@+id/devicesFragment"
@@ -70,11 +60,9 @@
         tools:layout="@layout/chat_room_group_info_fragment"
         android:label="GroupInfoFragment">
         <action
-            android:id="@+id/action_groupInfoFragment_to_chatRoomCreationFragment"
-            app:destination="@id/chatRoomCreationFragment" />
+            android:id="@+id/action_groupInfoFragment_to_chatRoomCreationFragment" />
         <action
-            android:id="@+id/action_groupInfoFragment_to_detailChatRoomFragment"
-            app:destination="@id/detailChatRoomFragment" />
+            android:id="@+id/action_groupInfoFragment_to_detailChatRoomFragment" />
     </fragment>
 
     <fragment
@@ -82,9 +70,9 @@
         android:name="org.linphone.activities.main.chat.fragments.ImdnFragment"
         tools:layout="@layout/chat_room_imdn_fragment"
         android:label="ImdnFragment">
-        <argument
-            android:name="MessageId"
-            app:argType="string" />
+<!--        <argument-->
+<!--            android:name="MessageId"-->
+<!--            app:argType="string" />-->
     </fragment>
 
     <fragment
