--- a/app/src/main/res/navigation/contacts_nav_graph.xml
+++ b/app/src/main/res/navigation/contacts_nav_graph.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:startDestination="@id/emptyContactFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <fragment
         android:id="@+id/emptyContactFragment"
@@ -10,8 +9,7 @@
         tools:layout="@layout/empty_fragment"
         android:label="EmptyContactFragment" />
 
-    <action android:id="@+id/action_global_emptyContactFragment"
-        app:destination="@id/emptyContactFragment" />
+    <action android:id="@+id/action_global_emptyContactFragment" />
 
     <fragment
         android:id="@+id/detailContactFragment"
@@ -20,34 +18,29 @@
         android:label="DetailContactFragment">
 
         <action
-            android:id="@+id/action_detailContactFragment_to_contactEditorFragment"
-            app:destination="@id/contactEditorFragment" />
+            android:id="@+id/action_detailContactFragment_to_contactEditorFragment" />
 
         <action
-            android:id="@+id/action_detailContactFragment_to_detailChatRoomFragment"
-            app:destination="@id/chat_nav_graph" />
+            android:id="@+id/action_detailContactFragment_to_detailChatRoomFragment" />
     </fragment>
 
     <action
-        android:id="@+id/action_global_detailContactFragment"
-        app:destination="@id/detailContactFragment" />
+        android:id="@+id/action_global_detailContactFragment" />
 
     <fragment
         android:id="@+id/contactEditorFragment"
         android:name="org.linphone.activities.main.contact.fragments.ContactEditorFragment"
         tools:layout="@layout/contact_editor_fragment"
         android:label="ContactEditorFragment">
-        <argument
-            android:name="SipUri"
-            app:argType="string"
-            app:nullable="true" />
+<!--        <argument-->
+<!--            android:name="SipUri"-->
+<!--            app:argType="string"-->
+<!--            app:nullable="true" />-->
         <action
-            android:id="@+id/action_contactEditorFragment_to_detailContactFragment"
-            app:destination="@id/detailContactFragment" />
+            android:id="@+id/action_contactEditorFragment_to_detailContactFragment" />
     </fragment>
 
     <action
-        android:id="@+id/action_global_contactEditorFragment"
-        app:destination="@id/contactEditorFragment" />
+        android:id="@+id/action_global_contactEditorFragment" />
 
 </navigation>
