--- a/app/src/main/res/navigation/history_nav_graph.xml
+++ b/app/src/main/res/navigation/history_nav_graph.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:startDestination="@id/emptyCallHistoryFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <fragment
         android:id="@+id/emptyCallHistoryFragment"
@@ -10,8 +9,7 @@
         tools:layout="@layout/empty_fragment"
         android:label="EmptyCallHistoryFragment" />
 
-    <action android:id="@+id/action_global_emptyFragment"
-        app:destination="@id/emptyCallHistoryFragment" />
+    <action android:id="@+id/action_global_emptyFragment" />
 
     <fragment
         android:id="@+id/detailCallLogFragment"
@@ -26,11 +24,9 @@
         android:label="DetailConferenceCallLogFragment" />
 
     <action
-        android:id="@+id/action_global_detailCallLogFragment"
-        app:destination="@id/detailCallLogFragment" />
+        android:id="@+id/action_global_detailCallLogFragment" />
 
     <action
-        android:id="@+id/action_global_detailConferenceCallLogFragment"
-        app:destination="@id/detailConferenceCallLogFragment" />
+        android:id="@+id/action_global_detailConferenceCallLogFragment" />
 
 </navigation>
